<resources>
    <string name="app_name">Travel Journal</string>
    <string name="my_trips">My Trips</string>
    <string name="map">Map</string>
    <string name="add">Add</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="search_trip">Search for a trip...</string>
    <string name="new_ones_first">New ones first</string>
    <string name="old_ones_first">Old ones first</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_new_trip">Add New Trip</string>
    <string name="choose_location">Choose Location</string>
    <string name="pick_image">Pick Image</string>
    <string name="location">Location</string>
    <string name="trip_was_added">Trip was added</string>
    <string name="you_need_to_fill_all_fields">You need to fill all fields</string>
    <string name="trip_was_updated">Trip was updated</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="share">Share</string>
    <string name="share_trip">Share Trip</string>
    <string name="shortcut_disabled">Shortcut disabled</string>
    <string name="open_map">Open Map</string>
    <string name="view_trips">View Trips</string>
</resources>